# spicycrab

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: actix_web.rst  async.rst  classes.rst  cli.rst  code_quality.rst  conf.py  control_flow.rst  cookcrab.rst  error_handling.rst  functions.rst  index.rst  installation.rst  quickstart.rst  stdlib.rst  types.rst
src/: lib.rs
src/spicycrab/: __init__.py  cli.py  debug_log.py  types.py
src/spicycrab/analyzer/: type_resolver.py
src/spicycrab/codegen/: __init__.py  cargo.py  emitter.py  stub_discovery.py
src/spicycrab/codegen/stdlib/: __init__.py  collections_map.py  glob_map.py  json_map.py  logging_map.py  os_map.py  random_map.py  rust_std_map.py  shutil_map.py  subprocess_map.py  tempfile_map.py  time_map.py  types.py
src/spicycrab/cookcrab/: __init__.py  cli.py  generator.py
src/spicycrab/ir/: __init__.py  nodes.py
src/spicycrab/macros/: __init__.py  attributes.py  decorator.py
src/spicycrab/parser/: python_ast.py  type_parser.py
src/spicycrab/types/: __init__.py  error.py  option.py  result.py
src/spicycrab/utils/: __init__.py
tests/: test_codegen_quality.py  test_cookcrab_cli.py  test_cookcrab_generator_regressions.py  test_docs_codegen_regressions.py  test_error_handling_codegen.py  test_error_handling_integration.py  test_integration.py  test_multifile.py  test_parser.py  test_stdlib.py  test_stub_discovery.py  test_tunnelbana_codegen.py
tests/fixtures/: example.py
