[package]
name = "spicycrab"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
description = "A Python to Rust transpiler for type-annotated Python code"
readme = "README.md"
license = "MIT"
keywords = ["python", "rust", "transpiler", "compiler", "pyo3"]
categories = ["development-tools", "compilers"]

[lib]
name = "_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
prettyplease = "0.2"
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.5"
toml = "0.9"
